--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="img-background">
   <div class="ui middle aligned container">
     <h2 class="text1">A slight breeze</h2>
-    <p class="text2">All the stuff you want for spring is here</p>
+    <p class="text2">All the stuff you want for spring is here.</p>
   </div>
 </div>
 <br>
